# simple-sip-rs

./: Cargo.toml  README.md
examples/: cli.rs
src/: config.rs  context.rs  lib.rs  manager.rs  utils.rs
src/call/: call_handler.rs  incoming_call.rs  mod.rs  outgoing_call.rs  rtp_session.rs  session_parameters.rs
src/connection/: call_connection.rs  mod.rs  sip_socket.rs  socket_data.rs
src/generators/: mod.rs  options.rs  register.rs  sdp.rs
src/media/: mod.rs  opus.rs  pcma.rs  pcmu.rs  telephone_events.rs
src/sip_proto/: mod.rs  options.rs  register.rs  sdp.rs  sip_message_decoder.rs
