[package]
name = "simple-sip-rs"
description = "A Tiny, Easy To Use, Experimental SIP Library for Rust"
repository = "https://github.com/seifane/simple-sip-rs"
license = "AGPL-3.0"
authors = ["Seifane Idouchach"]
version = "0.1.1"
edition = "2021"

[features]
default = ["opus", "pcmu"]
opus = ["dep:opus"]
pcmu = []
pcma = []

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }

log = "0.4.25"
anyhow = "1.0.95"
md-5 = "0.10.6"
uuid = { version = "1.13.1", features = ["v4"] }
bytes = "1.10.0"
rand = "0.9.0"

rsip = "0.4.0"
webrtc-util = "0.10.0"
webrtc-sdp = "0.3.13"
rtp = "0.12.0"

opus = { version = "0.3.0", optional = true }
fon = "0.6.0"
futures-util = "0.3.31"
tokio-util = { version = "0.7.13", features = ["codec"] }

[dev-dependencies]
simplelog = "0.12.2"

clap = { version = "4.5.28", features = ["derive"] }
cpal = { version = "0.15.3", features = ["jack"] }

[[example]]
name = "cli"
